# java-vs-go/file-server-go/resources/openapi.yaml
@@ -95,7 +95,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Response"
 
-  /file/upload:
+  /files/upload:
     post:
       tags:
         - File
@@ -135,7 +135,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Response"
 
-  /file/download:
+  /files/download:
     get:
       tags:
         - File
